
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.1-rc1
====================================
- [#MODX-2233] Fixed issue where qtip was not showing on Elements in a Category
- [#MODX-2203] Fixed issue where root of file tree was not accessible after navigating away
- [#MODX-2192], [#MODX-2232] Fixed issues with settings and their translations, names in the Settings grids
- Adjustments and optimizations to menus/actions processors and js
- [#MODX-2231] Fixed issue where saving translated properties would overwrite key with translation
- [#MODX-2220] Fixed bug where save_user was needed to change profile
- [#MODX-2213] Always include english lexicon when loading a lexicon to act as a backup translation
- [#MODX-2210] Added strip for xss in manager a variable
- [#MODX-2205] Fixed issue with saving resources with resource fields having html and unescaped content
- [#MODX-2198] Fixed directory checks on context web path for advanced distribution
- [#MODX-2194] Fixed issue with modLexicon::fetch not working if a prefix is set
- Removed SVN commit log from top header now that we're in Git
- Adjusted version to 2.0.1-rc1

MODx Revolution 2.0.0-pl  (LastChangedRevision: 7216, LastChangedDate: 2010-07-21 09:10:12 -0500 (Thu, 21 Jul 2010))
====================================
- [#MODX-2159] Fixed bug where richtext_default was being ignored in Quick Create
- [#MODX-2174] Fixed bug where manager_language was being ignored in Connectors, check for ctx init
- [#MODX-1715] Added reference to setting keymap_save to allow for overriding of save shortcut key
- [#MODX-2008] Updated Russian and Japanese translations
- [#MODX-2008] Added in Thai translation
- Fixed typo in filters english lexicon
- [#MODX-2008] Added in French translation, updated German translation